--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,6 +1,15 @@
 doctype html
 html
   head
+    <meta name="application-name" content="DR">
+    <meta name="apple-mobile-web-app-title" content="DR">
+    <meta name="msapplication-starturl" content="/">
+    <meta name="msapplication-navbutton-color" content="#E6E6FA">
+    <meta name="theme-color" content="#E6E6FA">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
