--- a/views/index.pug
+++ b/views/index.pug
@@ -19,6 +19,7 @@ block content
         })
       }
       window.addEventListener("beforeinstallprompt", (e) => {
+          alert("beforeinstallprompt")
           // Prevent Chrome 67 and earlier from automatically showing the prompt
           e.preventDefault();
           // Stash the event so it can be triggered later.
