--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,7 @@ block content
   h1= title
   p Welcome to #{title}
     <button class="add-button">Add to home screen</button>
+  #nav нажмите <img src="/images/1.jpg"> и "На экран "Домой" для установки приложения
   script.
       let deferredPrompt;
       const addBtn = document.querySelector(".add-button");
@@ -19,7 +20,7 @@ block content
         })
       }
       window.addEventListener("beforeinstallprompt", (e) => {
-          alert("beforeinstallprompt")
+
           // Prevent Chrome 67 and earlier from automatically showing the prompt
           e.preventDefault();
           // Stash the event so it can be triggered later.
@@ -43,5 +44,16 @@ block content
               });
           });
       });
+      const isIos = () => {
+          const userAgent = window.navigator.userAgent.toLowerCase();
+          return /iphone|ipad|ipod/.test(userAgent);
+      }
+      // Detects if device is in standalone mode
+      const isInStandaloneMode = () => ('standalone' in window.navigator) && (window.navigator.standalone);
+
+      // Checks if should display install popup notification:
+      if (isIos() && !isInStandaloneMode()) {
+          document.getElementById("nav").style.display = "block";
+      }
 
 
