--- a/views/layout.pug
+++ b/views/layout.pug
@@ -31,6 +31,6 @@ html
     <meta name="theme-color" content="#ffffff">
 
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/style/style.css')
   body
     block content
