--- a/views/index.pug
+++ b/views/index.pug
@@ -1,10 +1,11 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
-    <button class="add-button">Add to home screen</button>
+  .container
+  button.add-button.btn.brn-warning Установить приложение
   #nav нажмите <img src="/images/1.jpg"> и "На экран "Домой" для установки приложения
+  .alert.alert-primary Это контент сайта
+
   script.
       let deferredPrompt;
       const addBtn = document.querySelector(".add-button");
