--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   .container
-  button.add-button.btn.brn-warning Установить приложение
+  button.btn.brn-warning(class="add-button") Установить приложение
   #nav нажмите <img src="/images/1.jpg"> и "На экран "Домой" для установки приложения
   .alert.alert-primary Это контент сайта
 
