--- a/views/index.pug
+++ b/views/index.pug
@@ -21,7 +21,7 @@ block content
         })
       }
       window.addEventListener("beforeinstallprompt", (e) => {
-
+            console.log("beforeinstallprompt")
           // Prevent Chrome 67 and earlier from automatically showing the prompt
           e.preventDefault();
           // Stash the event so it can be triggered later.
