--- a/views/index.pug
+++ b/views/index.pug
@@ -2,9 +2,9 @@ extends layout
 
 block content
   .container
-    button.btn.brn-warning(class="add-button") Установить приложение
-
-    .alert.alert-primary Это контент сайта
+    button.btn.btn-warning(class="add-button") Установить приложение
+    div
+        .alert.alert-primary Это контент сайта
 
     #nav нажмите <img src="/images/1.jpg"> и "На экран "Домой" для установки приложения
 
