--- a/views/index.pug
+++ b/views/index.pug
@@ -2,8 +2,9 @@ extends layout
 
 block content
   .container
+
     button.btn.btn-warning(class="add-button") Установить приложение
-    div
+    div(style="margin-top:50px")
         .alert.alert-primary Это контент сайта
 
     #nav нажмите <img src="/images/1.jpg"> и "На экран "Домой" для установки приложения
